--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-lib",
-  "version": "0.1.0",
+  "name": "Vue Zephyrs",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "build": "vue-cli-service build --report --target lib --name my-lib ./src/index.js",
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "lodash": "^4.17.15",
+    "tailwindcss": "^1.2.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -25,9 +26,9 @@
     "@vue/cli-service": "^4.1.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.0.1",
+    "eslint-plugin-vue": "^6.2.1",
     "moment": "^2.24.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.11",
     "vuepress": "^1.2.0"
