--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "lint": "vue-cli-service lint",
     "docs:build": "vuepress build docs",
     "docs:dev": "vuepress dev docs",
-    "release": "sh release"
+    "release": "source .env && export GITHUB_TOKEN && npx release-it"
   },
   "main": "dist/vue-zephyrs.umd.min.js",
   "files": [
     "src",
     "dist/*.{js,css}"
   ],
+  "release-it": {
+    "github": {
+      "release": true
+    }
+  },
   "dependencies": {
     "lodash": "^4.17.15",
     "tailwindcss": "^1.2.0",
