--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "lodash": "^4.17.15",
+    "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.2.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-fragment": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -38,7 +40,7 @@
     "release-it": "^12.5.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.11",
-    "vuepress": "^1.2.0"
+    "vuepress": "^1.3.1"
   },
   "peerDependencies": {
     "moment": "^2.24.0"
