--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-zephyrs",
-  "version": "0.0.6-alpha",
+  "version": "0.0.6-alpha.0",
   "private": false,
   "description": "A Vue component library for Vue & Tailwind CSS.",
   "repository": {
