--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     }
   },
   "dependencies": {
+    "@bytegem/vue-heroicons": "^0.3.1",
     "lodash": "^4.17.15",
     "postcss-preset-env": "^6.7.0",
     "strip-indent": "^3.0.0",
@@ -52,6 +53,7 @@
     "node-sass": "^4.13.1",
     "release-it": "^12.6.3",
     "sass-loader": "^8.0.2",
+    "tailwindcss-dark-mode": "^1.1.4",
     "vue-template-compiler": "^2.6.11",
     "vuepress": "^1.4.0"
   },
