--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@bytegem/vue-heroicons": "^0.3.1",
     "@tailwindcss/ui": "^0.3.0",
+    "@trevoreyre/autocomplete-vue": "^2.2.0",
     "lodash": "^4.17.15",
     "postcss-preset-env": "^6.7.0",
     "strip-indent": "^3.0.0",
