--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "@natedunn/vue-zephyrs",
   "version": "0.1.3",
   "private": false,
-  "description": "A Vue component library for Vue & Tailwind CSS.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/natedunn/vue-zephyrs.git"
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
+  "description": "A Vue component library for Vue & Tailwind CSS.",
+  "repository": "git://github.com/natedunn/vue-zephyrs.git",
   "author": {
     "name": "Nate Dunn",
     "email": "hello@natedunn.net",
