--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   ],
   "release-it": {
     "github": {
-      "release": true
+      "release": true,
+      "releaseName": "${version}"
     }
   },
   "dependencies": {
