Don’t publish to NPM

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "github": {
       "release": true,
       "releaseName": "${version}"
+    },
+    "npm": {
+      "publish": false
     }
   },
   "dependencies": {
