--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     }
   },
   "dependencies": {
-    "@bytegem/vue-heroicons": "^0.5.0",
     "@tailwindcss/ui": "^0.3.0",
     "@trevoreyre/autocomplete-vue": "^2.2.0",
+    "feather-icons": "^4.28.0",
     "lodash": "^4.17.15",
     "postcss-preset-env": "^6.7.0",
     "strip-indent": "^3.0.0",
     "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
+    "vue-feather": "^1.0.1",
     "vue-fragment": "^1.5.1",
     "vue-multipane": "^0.9.5",
     "vue-prism-component": "^1.2.0"
