--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     }
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.2.0",
     "@tailwindcss/ui": "^0.3.0",
     "@trevoreyre/autocomplete-vue": "^2.2.0",
     "lodash": "^4.17.15",
+    "postcss-easy-import": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "strip-indent": "^3.0.0",
     "tailwindcss": "^1.4.6",
